# NFT-raffle

./: Anchor.toml  id.json  old-k.json  package-lock.json  package.json  raffle-keypair.json
programs/raffle/: Cargo.toml
programs/raffle/src/: error.rs  lib.rs  utils.rs
programs/raffle/src/processor/: buy.rs  close.rs  create.rs  mod.rs  update.rs
programs/raffle/src/state/: discount.rs  lottery.rs  mod.rs  ticket.rs
tests/: raffle.ts  utils.ts
