[package]
name = "raffle"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "raffle"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
spl-associated-token-account = "1.0.3"
solana-program = "1.9.13"

[dependencies.metaplex-token-metadata]
version = "0.0.1"
features = ["no-entrypoint"]
